# diffraction

./: .coveragerc  .gitignore  .travis.yml  Pipfile  README.md  circle.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: tests.yml
.planning/: ROADMAP.md
.planning/phases/02.1.1-address-review-md/: 02.1.1-01-PLAN.md  02.1.1-02-PLAN.md  02.1.1-03-PLAN.md  02.1.1-04-PLAN.md
diffraction/: __init__.py  cif.py  crystal.py  lattice.py  symmetry.py
diffraction/cif/: cif.py  helpers.py
diffraction/static/point_groups/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  4.json  5.json  6.json  7.json  8.json  9.json
docs/: Makefile
docs/source/: conf.py  diffraction.cif.rst  diffraction.rst  glossary.rst  index.rst  modules.rst
examples/: 00_lattice_and_crystal.ipynb  01_crystal_symmetry.ipynb  02_scattering_factors.ipynb  03_reflection_generation.ipynb  corundum.cif  gypsum.cif  quartz.cif  silicon.cif
scripts/: build_scattering_data.py  build_space_group_data.py
src/diffraction/: __init__.py  crystal.py  exceptions.py  lattice.py  reflections.py  scattering.py  symmetry.py
src/diffraction/cif/: __init__.py  cif.py  helpers.py
src/diffraction/static/: elements.json
src/diffraction/static/point_groups/: 1.json  10.json  11.json  12.json  14.json  16.json  17.json  18.json  19.json  2.json  20.json  23.json  27.json  3.json  31.json  32.json  4.json  5.json  8.json
src/diffraction/static/space_groups/: 1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  131.json  132.json  133.json  134.json  (+190 more)
tests/: conftest.py
tests/functional/: conftest.py  create_crystal_test.py  create_lattice_test.py  crystal_object_test.py  direct_lattice_calculations_test.py  import_cif_file_test.py  lattice_calculations_test.py  reciprocal_lattice_calculations_test.py  symmetry_operations_test.py  test_create_crystal.py  test_direct_lattice_calculations.py  test_import_cif_file.py  test_reciprocal_lattice_calculations.py  test_symmetry_operations.py
tests/functional/static/: BiFeO3.cif
tests/functional/static/invalid_cifs/: calcite_icsd.cif  calcite_icsd_duplicate_site_id.cif  calcite_icsd_missing_data_name_in_loop.cif  calcite_icsd_missing_data_name_inline.cif  calcite_icsd_missing_data_value_inline.cif  calcite_icsd_missing_field_in_loop.cif  calcite_icsd_missing_field_inline.cif  calcite_icsd_missing_lattice_parameter.cif  calcite_icsd_missing_site.cif  calcite_icsd_missing_value_in_loop.cif  calcite_icsd_missing_value_inline.cif
tests/functional/static/valid_cifs/: calcite_cod.cif  calcite_vesta.cif  multi_data_block.cif  non_cif_extension.txt
tests/unit/: cif_test.py  conftest.py  crystal_test.py  lattice_test.py  symmetry_test.py  test_crystal.py  test_lattice.py  test_reflections.py  test_scattering.py  test_symmetry.py
tests/unit/cif/: cif_test.py  helpers_test.py  test_cif.py  test_helpers.py
