[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diffraction"
version = "0.1"
description = "A package for simulating diffraction experiments and performing crystallographic calculations."
requires-python = ">=3.13"
dependencies = ["numpy"]

[tool.hatch.build.targets.wheel]
packages = ["src/diffraction"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "pytest-html",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov-config=.coveragerc",
    "--cov-report=html",
    "--cov=src/diffraction",
    "--html=pytest_report.html",
    "--verbose",
]
norecursedirs = ["example_libraries"]
