[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diffraction"
version = "0.1"
description = "A package for simulating diffraction experiments and performing crystallographic calculations."
requires-python = ">=3.11"
dependencies = ["numpy"]

[tool.hatch.build.targets.wheel]
packages = ["src/diffraction"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "pytest-html",
    "ruff>=0.15.2",
    "mypy>=1.19.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov-config=.coveragerc",
    "--cov-report=html",
    "--cov=src/diffraction",
    "--html=pytest_report.html",
    "--verbose",
]
norecursedirs = ["example_libraries"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "C",    # mccabe complexity
    "I",    # isort
    "UP",   # pyupgrade (modernise syntax)
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
    "PTH",  # prefer pathlib over os.path
    "A",    # flake8-builtins (catches shadowing of builtins)
]

[tool.ruff.lint.isort]
known-first-party = ["diffraction"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "E501",    # line too long (test assertions and parameterize data)
]
