[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diffraction"
version = "0.2"
description = "A package for simulating diffraction experiments and performing crystallographic calculations."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Noah Waterfield Price"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = ["numpy"]

[project.urls]
Repository = "https://github.com/noahwaterfieldprice/diffraction"

[tool.hatch.build.targets.wheel]
packages = ["src/diffraction"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "pytest-html",
    "ruff>=0.15.2",
    "mypy>=1.19.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov-config=.coveragerc",
    "--cov-report=html",
    "--cov=src/diffraction",
    "--html=pytest_report.html",
    "--verbose",
]
norecursedirs = ["example_libraries"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "C",    # mccabe complexity
    "I",    # isort
    "UP",   # pyupgrade (modernise syntax)
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
    "PTH",  # prefer pathlib over os.path
    "A",    # flake8-builtins (catches shadowing of builtins)
]

[tool.ruff.lint.isort]
known-first-party = ["diffraction"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "E501",    # line too long (test assertions and parameterize data)
]
